--- a/html/index_home.html
+++ b/html/index_home.html
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="/reset.css">
-    <link rel='stylesheet' type='text/css' media='screen' href='/css/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/main_home.css'>
+    <link rel="stylesheet" href="/css/variables.css">
 </head>
 <body>
         <header class="headerBack">
@@ -49,7 +49,7 @@
                 <img src="/img/Arrow 1.svg" alt="">
             </div>
         </section>
-        
+
     <div class="layout">
         <section class="page2">
             <div class="page2Left">                  
@@ -201,22 +201,25 @@
                 </div>
              </div>
         </section>
+    </div>  
         <footer>
-            <nav class="navigationMenu">
-                <a class="mainLogo" href="#"><img src="/img/logo.svg" alt="logo of company"></a>   
-                    <ul class="menu"> 
+            <div class="layout">
+                <nav class="navigationMenu">
+                    <a class="mainLogo" href="#"><img src="/img/logo.svg" alt="logo of company"></a>
+                    <ul class="menu">
                         <li class="menuItem"><a href="#">Home</a></li>
                         <li class="menuItem"><a href="#">About Us</a></li>
                         <li class="menuItem"><a href="#">Services</a></li>
-                        <li class="menuItem"><a href="#">Careers</a></li> 
-                        <li class="menuItem"><a href="#">Contact us</a></li>                                            
-                    </ul>    
-            </nav> 
-            <div>
-                <p>© 2021 IndiumTechnologies All Rights Reserved</p> 
-                <p>Deák Ferenc utca 23.2.emelet , Budapest, 1052,HU</p> 
+                        <li class="menuItem"><a href="#">Careers</a></li>
+                        <li class="menuItem"><a href="#">Contact us</a></li>
+                    </ul>
+                </nav>
+                <div class="footReserved">
+                    <p>© 2021 IndiumTechnologies All Rights Reserved</p>
+                    <p>Deák Ferenc utca 23.2.emelet , Budapest, 1052,HU</p>
+                </div>
             </div>
-        </footer>     
-    </div>            
+        </footer>
+              
 </body>
 </html>
