--- a/html/index_home.html
+++ b/html/index_home.html
@@ -46,7 +46,7 @@
             
                 <a href="#" class="redButton">GET STARTED</a>
             
-                <img src="/img/Arrow 1.svg" alt="">
+                <img src="/img/Arrow1.svg" alt="">
             </div>
         </section>
 
@@ -56,7 +56,7 @@
                 <div class="sideTitle">
                     <h1 class="secondaryTitle">who we are
                         </h1>
-                    <img src="/img/Arrow 3.svg" alt="">
+                    <img src="/img/Arrow3.svg" alt="">
                 </div>                   
                 <h2 class="mainTitle">
                     TECHNOLOGY INVESTMENTS AS A DIFFERENTIATOR
@@ -90,10 +90,10 @@
                     <h1 class="secondaryTitle">
                         we build future
                         </h1>
-                    <img src="/img/Arrow 4.svg" alt="">
+                    <img src="/img/Arrow4.svg" alt="">
                 </div>    
                 <div class="arrowTarget">
-                    <img src="/img/Group 3.svg" alt="">
+                    <img src="/img/Group3.svg" alt="">
                     <div>
                         <h1 class="lowerTitle">Our Mission & Vision</h1>
                         <p class="secondaryText">
@@ -106,7 +106,7 @@
                      </div>          
                 </div>
                 <div class="pathWay">
-                    <img src="/img/pathway 1.svg" alt="">
+                    <img src="/img/pathway1.svg" alt="">
                     <div>
                         <h1 class="lowerTitle"> Our Approach </h1>
                         <p class="secondaryText">
@@ -125,11 +125,11 @@
                 <h1 class="secondaryTitle">
                     our products
                     </h1>
-                <img src="/img/Arrow 3.svg" alt="">
+                <img src="/img/Arrow3.svg" alt="">
             </div>            
             <div class="page4Content">
                 <div class="contentLeft">
-                    <img src="/img/support 2.svg" alt="">
+                    <img src="/img/support2.svg" alt="">
                     <h1 class="otherTitle">System Integration</h1>
                     <p class="lowerText">
                         In today’s digital world, the ability to effectively integrate 
@@ -140,7 +140,7 @@
                     <a href="#" class="linkRM">READ MORE</a>
                 </div>
                 <div class="contentCenter">
-                    <img src="/img//desktop 1.svg" alt="">
+                    <img src="/img//desktop1.svg" alt="">
                     <h1 class="otherTitle">IT </h1>
                     <p class="secondaryText">
                         While you focus on delivering the best products or services you can to
@@ -150,7 +150,7 @@
                     <a href="#" class="linkRM">READ MORE</a>
                 </div>
                 <div class="contentRight">
-                    <img src="/img//browser 1.svg" alt="">
+                    <img src="/img//browser1.svg" alt="">
                     <h1 class="otherTitle">Process Optimization </h1>
                     <p class="secondaryText">
                         Improve efficiencies by leveraging methodology and productivity tools. 
@@ -181,15 +181,15 @@
                     <h1 class="titleFormWhite">Contact Information</h1>
                     <h2 class="titleLowWhite">Fill up the form and our Team will get back to you within 24 hours.</h2>
                     <div class="phoneNumber">
-                        <img src="/img/Phone Icon.png" alt="">
+                        <img src="/img/PhoneIcon.png" alt="">
                         <p class="numbersWhite">(+40) 772 100 200</p>
                     </div>
                     <div class="emailCompany">
-                        <img src="/img/Envelope Icon.png" alt="">
+                        <img src="/img/EnvelopeIcon.png" alt="">
                         <p class="lastFontForm">hello@indium-technology.com</p>
                     </div>
                     <div class="placeCompany">
-                        <img src="/img/Map Marker Icon.png" alt="">
+                        <img src="/img/MapMarkerIcon.png" alt="">
                         <p class="lastFontForm">Deák Ferenc utca 23.2.emelet, Budapest, 1052,HU</p>
                     </div>
                     <div class="socialIcons">
