add page services

--- a/html/index_about_us.html
+++ b/html/index_about_us.html
@@ -19,9 +19,9 @@
                 <div class="menu">
                     <div class="menuMain">
                         <ul class="menuList">
-                            <li class="menuItem"><a href="#">Home</a></li>
+                            <li class="menuItem"><a href="/html/index_home.html">Home</a></li>
                             <li class="menuItem"><a href="#">About Us</a></li>
-                            <li class="menuItem"><a href="#">Services</a></li>
+                            <li class="menuItem"><a href="/html/index_services.html">Services</a></li>
                             <li class="menuItem"><a href="#">Careers</a></li>
                         </ul>
                     </div>
@@ -149,9 +149,9 @@
                     <nav class="navigationMenu">
                         <a class="mainLogo" href="#"><img src="/img/logo.svg" alt="logo of company"></a>
                         <ul class="menu">
-                            <li class="menuItem"><a href="#">Home</a></li>
+                            <li class="menuItem"><a href="/html/index_home.html">Home</a></li>
                             <li class="menuItem"><a href="#">About Us</a></li>
-                            <li class="menuItem"><a href="#">Services</a></li>
+                            <li class="menuItem"><a href="/html/index_services.html">Services</a></li>
                             <li class="menuItem"><a href="#">Careers</a></li>
                             <li class="menuItem"><a href="#">Contact us</a></li>
                         </ul>
