--- a/html/index_home.html
+++ b/html/index_home.html
@@ -19,8 +19,8 @@
                         <div class="menuMain">
                             <ul class="menuList">
                                 <li class="menuItem"><a href="#">Home</a></li>
-                                <li class="menuItem"><a href="#">About Us</a></li>
-                                <li class="menuItem"><a href="#">Services</a></li>
+                                <li class="menuItem"><a href="/html/index_about_us.html">About Us</a></li>
+                                <li class="menuItem"><a href="/html/index_services.html">Services</a></li>
                                 <li class="menuItem"><a href="#">Careers</a></li>
                             </ul>
                         </div>
@@ -208,8 +208,8 @@
                     <a class="mainLogo" href="#"><img src="/img/logo.svg" alt="logo of company"></a>
                     <ul class="menu">
                         <li class="menuItem"><a href="#">Home</a></li>
-                        <li class="menuItem"><a href="#">About Us</a></li>
-                        <li class="menuItem"><a href="#">Services</a></li>
+                        <li class="menuItem"><a href="/html/index_about_us.html">About Us</a></li>
+                        <li class="menuItem"><a href="/html/index_services.html">Services</a></li>
                         <li class="menuItem"><a href="#">Careers</a></li>
                         <li class="menuItem"><a href="#">Contact us</a></li>
                     </ul>
