page home fix cards

--- a/index_about_us.html
+++ b/index_about_us.html
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='/css/main_about_us.css'>
-    <link rel="stylesheet" href="/css/variables.css">
+    <link rel='stylesheet' type='text/css' media='screen' href='css/main_about_us.css'>
+    <link rel="stylesheet" href="css/variables.css">
 </head>
 
 <body>
@@ -14,11 +14,11 @@
         <div class="layout">
             <nav class="navigationMenu">
                 <div class="mainLogo">
-                    <a href="#"><img src="/img/logo.svg" alt="logo of company"></a>
+                    <a href="#"><img src="img/logo.svg" alt="logo of company"></a>
                 </div>
                 <div class="menuMain">
                     <ul class="menuList">
-                        <li class="menuItem"><a href="index_home.html">Home</a></li>
+                        <li class="menuItem"><a href="index.html">Home</a></li>
                         <li class="menuItem"><a href="#">About Us</a></li>
                         <li class="menuItem"><a href="index_services.html">Services</a></li>
                         <li class="menuItem"><a href="#">Careers</a></li>
@@ -46,7 +46,7 @@
                  
             </p>
         
-            <img src="/img/Arrow1.svg" alt="">
+            <img src="img/Arrow1.svg" alt="">
         </div>
     </section>
 
@@ -55,7 +55,7 @@
             <div class="page2Left">
                 <div class="sideTitle">
                     <h1 class="secondaryTitle">we <br>are tech</h1>
-                    <img src="/img/Arrow3.svg" alt="">
+                    <img src="img/Arrow3.svg" alt="">
                 </div>
                 <h2 class="mainTitle">
                     LOREM IPSUM DOLOR SIT AMET SIT AMET
@@ -71,18 +71,18 @@
                 </p>
             </div>
             <div class="page2Right">
-                <img src="/img/AdobeStock2.svg" alt="">
+                <img src="img/AdobeStock2.svg" alt="">
             </div>
         </section>
 
         <section class="page3">
             <div class="page3Left">
-                <img src="/img/AdobeStock_3.svg" alt="">
+                <img src="img/AdobeStock_3.svg" alt="">
             </div>
             <div class="page3Right">
                 <di class="sideTitle">
                     <h1 class="secondaryTitle">we are <br>digital</h1>
-                    <img src="/img/Arrow4.svg   " alt="">
+                    <img src="img/Arrow4.svg   " alt="">
                 </di>
                 <div class="page3Content">
                     <h2 class="mainTitle">
@@ -105,11 +105,11 @@
                 <h1 class="secondaryTitle">
                     our products
                     </h1>
-                <img src="/img/Arrow3.svg" alt="">
+                <img src="img/Arrow3.svg" alt="">
             </div>    
             <div class="page4Content">
                 <div class="firstBlock">
-                    <img src="/img/support2.svg" alt="">
+                    <img src="img/support2.svg" alt="">
                     <h1 class="otherTitle">System Integration</h1>
                     <p class="lowerText">
                         In today’s digital world, the ability to effectively integrate 
@@ -119,7 +119,7 @@
                         </p>
                 </div>
                 <div class="secondBlock">
-                    <img src="/img/desktopBlack.svg" alt="">
+                    <img src="img/desktopBlack.svg" alt="">
                     <h1 class="otherTitle">IT </h1>
                     <p class="secondaryText">
                         While you focus on delivering the best products or services you can 
@@ -128,7 +128,7 @@
                     </p>
                 </div>
                 <div class="thirdBlock">
-                    <img src="/img/browser1.svg" alt="">
+                    <img src="img/browser1.svg" alt="">
                     <h1 class="otherTitle">Process Optimization </h1>
                     <p class="secondaryText">
                         Improve efficiencies by leveraging methodology and 
@@ -147,9 +147,9 @@
         <footer>
             <div class="layout">
                 <nav class="navigationMenu">
-                    <a class="mainLogo" href="#"><img src="/img/logo.svg" alt="logo of company"></a>
+                    <a class="mainLogo" href="#"><img src="img/logo.svg" alt="logo of company"></a>
                     <ul class="menu">
-                        <li class="menuItem"><a href="/html/index_home.html">Home</a></li>
+                        <li class="menuItem"><a href="index.html">Home</a></li>
                         <li class="menuItem"><a href="#">About Us</a></li>
                         <li class="menuItem"><a href="/html/index_services.html">Services</a></li>
                         <li class="menuItem"><a href="#">Careers</a></li>
