--- a/index_services.html
+++ b/index_services.html
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='/css/main_services.css'>
-    <link rel="stylesheet" href="/css/variables.css">
+    <link rel='stylesheet' type='text/css' media='screen' href='css/main_services.css'>
+    <link rel="stylesheet" href="css/variables.css">
 
 </head>
 <body>
@@ -15,12 +15,12 @@
             <div class="layout">
                 <nav class="navigationMenu">
                     <div class="mainLogo">
-                        <a href="#"><img src="/img/logo.svg" alt="logo of company"></a>
+                        <a href="#"><img src="img/logo.svg" alt="logo of company"></a>
                     </div>
                     <div class="menuMain">
                         <ul class="menuList">
-                            <li class="menuItem"><a href="/html/index_home.html">Home</a></li>
-                            <li class="menuItem"><a href="/html/index_about_us.html">About Us</a></li>
+                            <li class="menuItem"><a href="index.html">Home</a></li>
+                            <li class="menuItem"><a href="index_about_us.html">About Us</a></li>
                             <li class="menuItem"><a href="#">Services</a></li>
                             <li class="menuItem"><a href="#">Careers</a></li>
                         </ul>
@@ -45,14 +45,14 @@
                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
                      nisi ut aliquip ex ea commodo consequat.                     
                 </p>
-                <img src="/img/Arrow1.svg" alt="">
+                <img src="img/Arrow1.svg" alt="">
             </div>
         </section>
 
     <div class="layout">
         <section class="page2">
             <div class="page2Content">
-                <img src="/img/support2.svg" alt="">
+                <img src="img/support2.svg" alt="">
                 <h1 class="mainTitle">SYSTEM INTEGRATION</h1>
                 <p class="whiteText">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -65,16 +65,16 @@
                 </p>
             </div>
             <div class="page2Photo">
-                <img src="/img/AdobeStock_4.svg" alt="">
+                <img src="img/AdobeStock_4.svg" alt="">
             </div>
         </section>
 
         <section class="page3">
             <div class="page3Photo">
-                <img src="/img/AdobeStock_5.svg" alt="">
+                <img src="img/AdobeStock_5.svg" alt="">
             </div>
             <div class="page3Content">
-                <img src="/img/desktop1.svg" alt="">
+                <img src="img/desktop1.svg" alt="">
                 <h1 class="mainTitle">IT SERVICES</h1>
                 <p class="whiteText">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -89,7 +89,7 @@
         </section>
         <section class="page4">
             <div class="page4Content">
-                <img src="/img/browser1.svg" alt="">
+                <img src="img/browser1.svg" alt="">
                 <h1 class="mainTitle">PROCESS OPTIMIZATION</h1>
                 <p class="whiteText">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -102,7 +102,7 @@
                 </p>
             </div>
             <div class="page4Photo">
-                <img src="/img/AdobeStock_6.svg" alt="">
+                <img src="img/AdobeStock_6.svg" alt="">
             </div>
         </section>
 
@@ -117,10 +117,10 @@
     <footer>
         <div class="layout">
             <nav class="navigationMenu">
-                <a class="mainLogo" href="#"><img src="/img/logo.svg" alt="logo of company"></a>
+                <a class="mainLogo" href="#"><img src="img/logo.svg" alt="logo of company"></a>
                 <ul class="menu">
-                    <li class="menuItem"><a href="/html/index_home.html">Home</a></li>
-                    <li class="menuItem"><a href="/html/index_about_us.html">About Us</a></li>
+                    <li class="menuItem"><a href="index_home.html">Home</a></li>
+                    <li class="menuItem"><a href="index_about_us.html">About Us</a></li>
                     <li class="menuItem"><a href="#">Services</a></li>
                     <li class="menuItem"><a href="#">Careers</a></li>
                     <li class="menuItem"><a href="#">Contact us</a></li>
