--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='/css/main_home.css'>
-    <link rel="stylesheet" href="/css/variables.css">
+    <link rel='stylesheet' type='text/css' media='screen' href='css/main_home.css'>
+    <link rel="stylesheet" href="css/variables.css">
 </head>
 <body>
         <header class="headerBack">
@@ -18,8 +18,8 @@
                     <div class="menuMain">
                         <ul class="menuList">
                             <li class="menuItem"><a href="#">Home</a></li>
-                            <li class="menuItem"><a href="/html/index_about_us.html">About Us</a></li>
-                            <li class="menuItem"><a href="/html/index_services.html">Services</a></li>
+                            <li class="menuItem "><a href="index_about_us.html">About Us</a></li>
+                            <li class="menuItem"><a href="index_services.html">Services</a></li>
                             <li class="menuItem"><a href="#">Careers</a></li>
                         </ul>
         
@@ -38,8 +38,8 @@
         
                         <ul class="menubox">
                             <li class="menu-item"><a href="#">Home</a></li>
-                            <li class="menu-item"><a href="/html/index_about_us.html">About Us</a></li>
-                            <li class="menu-item"><a href="/html/index_services.html">Services</a></li>
+                            <li class="menu-item"><a href="index_about_us.html">About Us</a></li>
+                            <li class="menu-item"><a href="index_services.html">Services</a></li>
                             <li class="menu-item"><a href="#">Careers</a></li>
                             <li class="menu-item"><a href="#">Contact us</a></li>
                         </ul>
